fixed path for the constants and utils packages so it reflects the new project's structure